# django-material-admin

./: Dockerfile  MANIFEST.in  Makefile  build.sh  dev-requirements.txt  gulpfile.js  package-lock.json  package.json  setup.cfg  setup.py
libs/js/: materialize-init.js  materialize.js
libs/sass/: admin-out.scss  autocomplete.scss  base_site-theme.scss  base_site.scss  change_form.scss  changelists.scss  header.scss  index.scss  layout.scss  login.scss  material_icons.scss  materialize.scss  money_widget.scss  palette.scss  search_form.scss  side_nav.scss  tray.scss
material/admin/: fields.py  forms.py  options.py  settings.py  sites.py  widgets.py
material/static/admin/js/: highlight-init.js  highlight.min.js  inlines.js
material/static/material/admin/css/: admin-out.min.css  autocomplete.min.css  base_site-theme.min.css  base_site.min.css  change_form.min.css  changelists.min.css  header.min.css  index.min.css  layout.min.css  login.min.css  material_icons.min.css  materialize.min.css  money_widget.min.css  palette.min.css  search_form.min.css  side_nav.min.css  tray.min.css
material/static/material/admin/js/: RelatedObjectLookups.min.js  inline-forms.min.js  materialize-init.min.js  materialize.min.js
material/static/material/fonts/: rename-font.py
material/static/material/js/: jquery-ui.min.js
material/templates/admin/: actions.html  base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  pagination.html  search_form.html
material/templates/admin/edit_inline/: tabular.html
material/templates/admin/includes/: fieldset.html
material/templates/admin/widgets/: related_widget_wrapper.html  url.html
material/templates/material/admin/: index.html  login.html  side_nav.html  tray.html
material/templatetags/: material.py
(+15 files in other folders)
