[metadata]
name = django-material-admin
version = 2022.3.17
license = MIT License
license_files = LICENSE.TXT
author = Anton Maistrenko
author_email = it2015maistrenko@gmail.com
maintainer = Melvyn Sopacua
maintainer_email = melvyn@oviavo.com
url = https://github.com/oviavo/django-material-admin
description = Material Design For Oviavo's Backoffice
long_description = file:README.rst
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Framework :: Django :: 3.2
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
keywords =
  Backoffice
  Django Admin
  Material Design

[options]
packages =
  material
install_requires =
  Django>=3.2,<4
  Pillow<9
include_package_data = yes

[options.extras_require]
whitenoise =
  whitenoise>=5.2.0
