[metadata]
name = django-material-admin
version = 2023.12.19
license = MIT License
license_files = LICENSE.TXT
author = Anton Maistrenko
author_email = it2015maistrenko@gmail.com
maintainer = Melvyn Sopacua
maintainer_email = melvyn@apryl.co
url = https://github.com/get-apryl/django-material-admin
description = Material Design For Oviavo's Backoffice
long_description = file:README.rst
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Framework :: Django :: 3.2
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
keywords =
  Backoffice
  Django Admin
  Material Design

[options]
packages =
  material
  material.admin
  material.templatetags
install_requires =
  Django
  Pillow
  django-money
  django-otp
  qrcode
include_package_data = yes

[options.extras_require]
whitenoise =
  whitenoise>=5.2.0
